--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "material-design-icons": "^3.0.1",
+    "material-design-lite": "^1.3.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
