--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "markdown": "^0.5.0",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
     "react": "^15.4.2",
