--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "truffle-hdwallet-provider": "0.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
